Weigh painting brush consistency #43535

Closed
opened 2015-02-02 20:36:11 +01:00 by Erick Tukuniata · 11 comments

System Information
Operating system and graphics card
win 7 ge force gtx 550ti

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen) blender 2.73 8cd106f
Worked: (optional)

Short description of error
Weigh painting brush inconsistency or should say behavior odd

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I m thinking that this might not be a bug or more like a consistency issue, as a user i would like to call them bugs.

  1. Add texture image brush in paint mode set the brush mapping to stencils and go to weigh paint the image textures appear even though there is not way to handle image texture in weigh paint mode. I believe that weigh paint should behave different from other mode since it doesn't handle image texture.

  2. While weight painting on your model that is symmetric, with other paint mode the shortcut shift+f scale the brush size but here it shift the selection the mirrored bone. I m suggesting to make shift+f shortcut global for all mode and may be make ctrl+shift+f to select the mirrored bone.

I believe that we don't blend here.

**System Information** Operating system and graphics card win 7 ge force gtx 550ti **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) blender 2.73 8cd106f Worked: (optional) **Short description of error** Weigh painting brush inconsistency or should say behavior odd **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I m thinking that this might not be a bug or more like a consistency issue, as a user i would like to call them bugs. 1. Add texture image brush in paint mode set the brush mapping to stencils and go to weigh paint the image textures appear even though there is not way to handle image texture in weigh paint mode. I believe that weigh paint should behave different from other mode since it doesn't handle image texture. 2. While weight painting on your model that is symmetric, with other paint mode the shortcut shift+f scale the brush size but here it shift the selection the mirrored bone. I m suggesting to make shift+f shortcut global for all mode and may be make ctrl+shift+f to select the mirrored bone. I believe that we don't blend here.

Changed status to: 'Open'

Changed status to: 'Open'
Antonis Ryakiotakis was assigned by Erick Tukuniata 2015-02-02 20:36:11 +01:00

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Correction shift+f resize the strength of the brush not the size.

Correction shift+f resize the strength of the brush not the size.

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

Seems quite clean report, just needs feedback from @Psy-Fi now :)

Seems quite clean report, just needs feedback from @Psy-Fi now :)

Hehe, I remember testing this but was too lazy to fix, didn't think a user would fall upon it - never underestimate users :)

Hehe, I remember testing this but was too lazy to fix, didn't think a user would fall upon it - never underestimate users :)
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

@Psy-Fi, don't think we should leave this as a bug? Or at least not for #BF_Blender ?

@Psy-Fi, don't think we should leave this as a bug? Or at least not for #BF_Blender ?

This issue was referenced by 6ddd2549ed

This issue was referenced by 6ddd2549edfd65ec21fe54efae21e963b83fba1e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6ddd2549ed.

Closed by commit 6ddd2549ed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43535
No description provided.